@@ -14,10 +14,10 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 ab3edd1d3a44953e6e322681b74bf56537604be6 ChangeLog
+SHA1 4f59cd1fc5c705cd59d8543c01753837d93c7815 ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 536d4ce30b1934be585da55e463477877c31fe8c MANIFEST
-SHA1 64f59957a44528c47685fe45df68e68f8c1bf3ea META.yml
+SHA1 a3b3a62b392c3bd82c700703a5c7d552840503a7 META.yml
 SHA1 85f9401b2c422cd079d521911905670a71d266c1 Makefile.PL
 SHA1 2af679880fb8ac967e5d63069f8ec3b3508425d3 README
 SHA1 20c73697e1713638140c719d8eaa19a275ed43a5 inc/Module/AutoInstall.pm
@@ -31,13 +31,13 @@ SHA1 b721c93ca5bc9a6aa863b49af15f1b1de6125935 inc/Module/Install/Makefile.pm
 SHA1 026cc0551a0ad399d195e395b46bdf842e115192 inc/Module/Install/Metadata.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
-SHA1 2de3a596fdfe29d094fb7d6dd6b8e1da82e76f1a lib/Term/Menus.pm
+SHA1 fb1ef5159d50cca3812acf45d9b611dbea56175d lib/Term/Menus.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 ded9def7d10cf71606da96112acc159e0aa9a582 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.12 (Cygwin)
 
-iEYEARECAAYFAlBoucoACgkQJM3IZYB6aOqLgwCff//4oLtm/3YsIfMhNXED3v0t
-suUAoKZfVJcWNgBHcGHhWSYFCkdXYAbH
-=K2jJ
+iEYEARECAAYFAlBrUMsACgkQJM3IZYB6aOptzwCfTT2GCim8Nuslb3WG3ZojOtwM
+raAAoITOn9ZFo4G3o+Kbl4KD0abVEVcm
+=aJId
 -----END PGP SIGNATURE-----
