@@ -1,3 +1,10 @@
+2012-10-02  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 2.18 released.
+
+        * Fixed some install issues when bunlded with FullAuto.
+
+
 2012-09-30  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 2.17 released.
